<?xml version="1.0"?>
<package>
  <name>robotont_description</name>
  <version>0.0.5</version>
  <description>The robotont_description package</description>

  <author>Madis Kaspar Nigol</author>

  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <maintainer email="karl.kruusamae@ut.ee">Karl Kruusamäe</maintainer>

  <url type="website">https://wiki.ros.org/robotont</url>
  <url type="website">http://robotont.ut.ee</url>
  <url type="repository">http://github.com/robotont/robotont_driver</url>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
